--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Who's that Pokemon?</title>
 
-    <link rel="stylesheet" href="style.css">
-    <script src="allPokemons.js"></script>
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./allPokemons.js"></script>
+    <script src="./script.js"></script>
 
     <script src="https://kit.fontawesome.com/d4a52177dc.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
